.provarCaches/00D5f000005vwGkEAI/objects/rstk__sobjlink__c.object
<CustomObject>
    <description>sobjlink__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>icitem</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ Sobject Links</relationshipLabel>
        <relationshipName>ZZ_Sobject_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>peitem</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ Sobject Links</relationshipLabel>
        <relationshipName>ZZ_Sobject_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>ZZ Sobject Links</relationshipLabel>
        <relationshipName>Self_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sylocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sylocid link</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ Sobject Links</relationshipLabel>
        <relationshipName>ZZ_Sobject_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syreqind__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SYREQIND</label>
        <referenceTo>rstk__syreqind__c</referenceTo>
        <relationshipLabel>ZZ Sobject Links</relationshipLabel>
        <relationshipName>Self_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ Sobject Link</label>
    <nameField>
        <label>Self Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ Sobject Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>